# knapsack-aco-final

./: .gitignore  CMakeLists.txt  README.md  help_flags.txt
build_fast_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_mgw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
config/: targets.csv
data/: inst1.txt  inst2.txt  p01.txt  p02.txt  p03.txt  p04.txt  p05.txt  p06.txt
include/: acoBase.hpp  acs.hpp  as.hpp  asRank.hpp  mmas.hpp  problem.hpp  profiles.h
lists/: dificeis_all.txt  dificeis_b1.txt  dificeis_b10.txt  dificeis_b2.txt  dificeis_b3.txt  dificeis_b4.txt  dificeis_b5.txt  dificeis_b6.txt  dificeis_b7.txt  dificeis_b8.txt  dificeis_b9.txt  dificeis_smoke2.txt  dificeis_smoke5.txt
results/: execucoes_p01_p08.csv  p01_p08_results.csv  resumo_p01_p08.csv
scripts/: analyse_classic_vs_difficult.py  analyse_from_merged.py  analyse_from_robust.py  analyze_results.py  analyze_summary.py  audit_runs.ps1  check_quick.py  check_summary_min.py  clean_all.py  clean_everything.ps1  compare_simple.py  compare_simple_auto.py  compare_simple_verbose.py  compare_variants.py  convert_jooken_to_classic.py  fetch_jooken.ps1  fix_merge.py  generate_summary_triplet.py  merge_any_results.py  merge_batches.py  merge_results.py  normalize_all_headers.py  normalize_jooken.py  prepare_jooken.ps1  purge_outp_all.py  quick_check_merged.py  rebuild_all.py  reset_results.ps1  run_profiles.ps1  (+7 more)
(+6327 files in other folders)
